manifests/workloads/sonatype-nexus-oss/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-main-danmanners-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: nexus.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app.kubernetes.io/instance: nexus
spec:
  type: ExternalName
  externalName: kube.danmanners.com
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: nexus-containers-danmanners-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: containers.danmanners.com
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app.kubernetes.io/instance: nexus
spec:
  type: ExternalName
  externalName: kube.danmanners.com
  sessionAffinity: None
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nexus-danmanners-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`nexus.danmanners.com`)
      kind: Rule
      services:
        - name: nexus-oss
          port: 8081
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
    - match: Host(`containers.danmanners.com`)
      kind: Rule
      services:
        - name: nexus-oss
          port: 5001
      middlewares:
        - name: http-https-redirectscheme
          namespace: kube-system
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nexus-danmanners-websecure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`nexus.danmanners.com`)
      kind: Rule
      services:
        - name: nexus-oss
          port: 8081
    - match: Host(`nexus.danmanners.com`) && PathPrefix(`/v2/`)
      kind: Rule
      services:
        - name: nexus-oss
          port: 5001
    - match: Host(`containers.danmanners.com`)
      kind: Rule
      services:
        - name: nexus-oss
          port: 5001
  tls:
    secretName: nexus-danmanners-cert
